Closed Bug 1577432 Opened 5 years ago Closed 4 years ago

Crash in [@ mozilla::dom::BrowserChild::RecvSizeModeChanged]

Categories

(Core :: DOM: Content Processes, defect, P5)

defect

Tracking

()

RESOLVED FIXED
mozilla75
Tracking Status
firefox-esr60 --- wontfix
firefox-esr68 --- wontfix
firefox68 --- wontfix
firefox69 --- wontfix
firefox70 --- wontfix
firefox73 --- wontfix
firefox74 --- wontfix
firefox75 --- fixed

People

(Reporter: philipp, Assigned: smaug)

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

This bug is for crash report bp-3ca35096-1141-43b3-8970-0cdeb0190829.

Top 10 frames of crashing thread:

0 xul.dll mozilla::dom::BrowserChild::RecvSizeModeChanged dom/ipc/BrowserChild.cpp:1256
1 xul.dll mozilla::dom::PBrowserChild::OnMessageReceived ipc/ipdl/PBrowserChild.cpp:4397
2 xul.dll mozilla::dom::PContentChild::OnMessageReceived ipc/ipdl/PContentChild.cpp:7197
3 xul.dll mozilla::ipc::MessageChannel::DispatchMessage ipc/glue/MessageChannel.cpp:2082
4 xul.dll mozilla::ipc::MessageChannel::RunMessage ipc/glue/MessageChannel.cpp:1939
5 xul.dll mozilla::SchedulerGroup::Runnable::Run xpcom/threads/SchedulerGroup.cpp:295
6 xul.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1225
7 xul.dll NS_ProcessNextEvent xpcom/threads/nsThreadUtils.cpp:486
8 xul.dll nsresult mozilla::dom::XMLHttpRequestMainThread::SendInternal dom/xhr/XMLHttpRequestMainThread.cpp:2913
9 xul.dll void mozilla::dom::XMLHttpRequestMainThread::Send dom/xhr/XMLHttpRequestMainThread.cpp

this is a cross-platform content crash signature, hanging around in firefox with a low volume for some time already.

Looks like null+offset crash.
And this has been there forever.

Assignee: nobody → bugs

Based on crash stats the crash is null+offset, and I think the issue can happen during closing down
BrowserChild if there is a pending RecvSizeModeChanged message.
The crash has been there for ages, I think since bug 1104916

Note, BrowserChild::RecvUpdateDimensions does have a null check for the document.

Pushed by opettay@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/813b87f46a51
Null check document in BrowserChild::RecvSizeModeChanged, r=bdahl
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla75

The patch is just an added null check, OTOH this is a low volume crash. We probably don't need to uplift.

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: