Bug 1577432 - Null check document in BrowserChild::RecvSizeModeChanged, r=bdahl

Based on crash stats the crash is null+offset, and I think the issue can happen during closing down
BrowserChild if there is a pending RecvSizeModeChanged message.
The crash has been there for ages, I think since bug 1104916

Note, BrowserChild::RecvUpdateDimensions does have a null check for the document.

Differential Revision: https://phabricator.services.mozilla.com/D63963